remove mock slds and add it to site profile
